MTP-394 Fix li spacing and icon alignment

--- a/mt-kit/core/css/src/components/_status.scss
+++ b/mt-kit/core/css/src/components/_status.scss
@@ -15,34 +15,49 @@
     grid-area: heading;
     overflow-wrap: anywhere;
   }
+
   .important {
     grid-area: icon;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
 
     &::before {
       content: url('data:image/svg+xml,%3Csvg%20width%3D%2230%22%20height%3D%2230%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Ccircle%20cx%3D%2215%22%20cy%3D%2215%22%20r%3D%2215%22%20fill%3D%22%23E23128%22%2F%3E%3Cpath%20d%3D%22M13.367%207.654h3.057v3.653l-.791%206.718h-1.455l-.81-6.718V7.654zm.068%2011.524h2.91V22h-2.91v-2.822z%22%20fill%3D%22%23fff%22%2F%3E%3C%2Fsvg%3E');
       display: inline-block;
       margin-right: var(--spacer-xx-small);
+      padding-top: calc(2px + 0.2ex + 2px);
       width: 2rem;
       height: 2rem;
     }
   }
+
+
   dl {
     grid-area: date;
     margin-top: var(--spacer-xx-small);
   }
+
   .text {
     grid-area: text;
+
     :first-child:not(h2):not(h3):not(h4) {
       margin-top: var(--spacer-x-small);
     }
+
+    ul {
+      li {
+        margin-top: var(--spacer-xxx-small);
+      }
+    }
   }
+
   .action {
     grid-area: actions;
   }
+
   a {
     grid-area: link;
     margin-top: var(--spacer-x-small);
   }
+
 }
